--- a/_cases/2025/DIVD-2025-00031.md
+++ b/_cases/2025/DIVD-2025-00031.md
@@ -32,7 +32,7 @@ timeline:
   event: "DIVD started scanning for vulnerable servers"  
 - start: 2025-06-26
   end:
-  event: "First version of this case file”
+  event: "First version of this case file"
 - start: 2025-06-26
   end:
   event: "DIVD sent out a first batch of notifications."
