nog een paar kleine wijzigingen

--- a/_cases/2025/DIVD-2025-00031.md
+++ b/_cases/2025/DIVD-2025-00031.md
@@ -10,6 +10,7 @@ researchers:
 cves:
 - CVE-2025-5349
 - CVE-2025-5777
+- CVE-2025-6543
 product: 
 - Citrix ADC (NetScaler ADC)
 - Citrix Gateway (NetScaler Gateway)
@@ -30,6 +31,9 @@ timeline:
 - start: 2025-06-24
   end:
   event: "DIVD started scanning for vulnerable servers"  
+- start: 2025-06-25
+  end:
+  event: "Citrix releases a security bulletin for CVE-2025-6543"
 - start: 2025-06-26
   end:
   event: "First version of this case file"
