Stealer logs operation Endgame

--- a/_cases/2025/DIVD-2025-00018.md
+++ b/_cases/2025/DIVD-2025-00018.md
@@ -33,11 +33,15 @@ timeline:
 - start: 2025-05-23
   end:
   event: "Dutch National Police goes public with Operation Endgame 2.0."
-- start: 2024-05-23
+- start: 2025-05-23
   end: open
   event: "DIVD sends out first notifications."
+- start: 2025-06-11
+  event: "DIVD receives victim information stealer logs"
+- start: 2025-07-04
+  event: "DIVD finishes crunching stealer log extracts"
 ips: n/a
-creds: 12617
+creds: 62833299
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 ---
@@ -47,7 +51,8 @@ Last year, Operation Endgame marked the biggest anti-botnet operation to date. T
 
 This data has been shared with us and various other parties like [Have I Been Pwned](https://haveibeenpwned.com/), [Spamhaus](https://www.spamhaus.org/resource-hub/malware/operation-endgame-botnets-disrupted-after-international-action/), [Project No More Leaks](https://www.politie.nl/onderwerpen/no-more-leaks.html), [Project Check je Hack](https://www.politie.nl/informatie/checkjehack.html), the (Dutch) [NCSC](https://ncsc.nl),  [CSIRT-DSP](https://csirtdsp.nl/), and [Digital Trust Center](https://www.digitaltrustcenter.nl/).
 
-The data we have received consists of usernames, (redacted) passwords, and dates of these passwords last being used. It is expected that this data originates from the password managers of popular browsers.
+The data we have received about latrodectus consists of usernames, (redacted) passwords, and dates of these passwords last being used. It is expected that this data originates from the password managers of popular browsers.
+The data we received about stealer logs consists of usernames, (redacted) passwords, url the password pertains to and the date the password has stolen.
 
 ## What you can do
 
