--- a/_cases/2025/DIVD-2025-00018.md
+++ b/_cases/2025/DIVD-2025-00018.md
@@ -34,12 +34,16 @@ timeline:
   end:
   event: "Dutch National Police goes public with Operation Endgame 2.0."
 - start: 2025-05-23
-  end: open
+  event: "DIVD receives data about Latrodectus victims."
+- start: 2025-05-23
+  end: 2025-05-24
   event: "DIVD sends out first notifications."
 - start: 2025-06-11
-  event: "DIVD receives victim information stealer logs"
+  event: "DIVD receives victim information stealer logs."
 - start: 2025-07-04
   event: "DIVD finishes crunching stealer log extracts"
+- start: 2025-07-07
+  event: "DIVD starts sharing victim information with certs, csirts and security teams."
 ips: n/a
 creds: 62833299
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
@@ -60,7 +64,7 @@ As these notifications mostly span user accounts, you should start with ensuring
 
 ## What we are doing
 
-We have received the discovered data from the police, and are sending out notification to individuals and organizations that have fallen victim to compromise. To effectively do this, we are in close cooperation with the Dutch National Police as well as the NCSC, CSIRT-DSP and DTC.
+We have received the discovered data from the police regarding latrodectus, and are sending out notification to individuals and organizations that have fallen victim to compromise. To effectively do this, we are in close cooperation with the Dutch National Police as well as the NCSC, CSIRT-DSP and DTC.
 
 ## Frequently asked questions
 
@@ -129,3 +133,4 @@ A: Yes it is. Under Dutch law and European privacy regulations, we can process t
 * [Operation Endgame persbericht Nederlandse Politie](https://www.politie.nl/nieuws/2025/mei/22/11-internationale-politiediensten-pakken-met-operation-endgame-door-in-bestrijding-ransomware.html)
 * [Operation Endgame perbericht Europol](https://www.europol.europa.eu/media-press/newsroom/news/operation-endgame-strikes-again-ransomware-kill-chain-broken-its-source)
 * Dedicated sub-page for [Latrodectus personal accounts](/DIVD-2025-00018/personal-latrodectus-account/)
+* Dedicated sub-page for [Stealer logs](/DIVD-2025/00018/stealer-logs)
