update the case with the second run

--- a/_cases/2025/DIVD-2025-00032.md
+++ b/_cases/2025/DIVD-2025-00032.md
@@ -25,6 +25,15 @@ timeline:
 - start: 2025-06-24
   end: 2025-06-24
   event: "DIVD starts scanning the internet for open Pterodactyl instances."
+- start: 2025-06-24
+  end: 2025-06-24
+  event: "DIVD sent out a first batch of notifications."
+- start: 2025-07-08
+  end: 2025-07-08
+  event: "DIVD starts scanning the internet for open Pterodactyl instances for second time."
+- start: 2025-07-08
+  end: 2025-07-08
+  event: "DIVD sent out a second batch of notifications."
 ---
 ## Summary
 
