--- a/_cases/2025/DIVD-2025-00016.md
+++ b/_cases/2025/DIVD-2025-00016.md
@@ -49,7 +49,7 @@ timeline:
 - start: 2025-06-26
   end:
   event: "DIVD begins notifying owners third time of vulnerable systems."
-- start: 2025-07-09:
+- start: 2025-07-09
   end: 2025-07-09
   event: "DIVD case closed"
 ips: 1747
