Update and rename DIVD-2025-00034 to DIVD-2025-00034.md
Added timeline update after starting mail run. 
Added fix for .md error in links.

--- a/_cases/2025/DIVD-2025-00034.md
+++ b/_cases/2025/DIVD-2025-00034.md
@@ -26,6 +26,9 @@ timeline:
 - start: 2025-07-04
   end: 2025-07-04
   event: "DIVD starts scanning the internet for open IBM WebSphere instances."
+- start: 2025-07-09
+  end: 2025-07-09
+  event: "DIVD sent out a first batch of notifications."
 ---
 ## Summary
 
@@ -43,5 +46,6 @@ DIVD is currently working to identify parties that are running a vulnerable vers
 {% include timeline.html %}
 
 ## More information
+
 * [IBM](https://www.ibm.com/support/pages/node/7237967)
 * [cve.org](https://www.cve.org/CVERecord?id=CVE-2025-36038)
