--- a/_cases/2025/DIVD-2025-00033.md
+++ b/_cases/2025/DIVD-2025-00033.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "Remote Code Execution in GeoServer version < 2.27.0, < 2.26.2 and < 2.25.6"
+title: "Remote Code Execution in GeoServer versions below 2.27.0, 2.26.2 and 2.25.6"
 excerpt: "A critical vulnerability in GeoServer was discovered in versions below 2.27.0, 2.26.2, and 2.25.6 that allows a remote code execution via injecting XML code"
 author: Victor Pasman
 lead: Victor Pasman
@@ -11,7 +11,7 @@ researchers:
 - Tycho Niestadt
 cves: CVE-2025-30220
 product: GeoServer
-versions: GeoServer < 2.27.0, < 2.26.2, < 2.25.6 
+versions: GeoServer below 2.27.0, 2.26.2, 2.25.6 
 recommendation: "Update to versions 2.27.0, 2.26.2, 2.25.6, or later"
 patch_status: Fully patched
 workaround: "None"
