Replace theorg.com API with DIVD JSON API and fix team member links
- Replace deprecated theorg.com GraphQL API with DIVD JSON API
- Use https://www.divd.nl/documents/people.json for team data
- Generate URL-encoded person_id matching DIVD website URLs
- Preserve special characters in name field for Jekyll matching
- Create alias files for backward compatibility
- Fix Bartłomiej Lizak spelling in DIVD-2024-00004 case
- Remove social links and descriptions from generated markdown files
- Improved from 55 to 64 team members
- Reduced missing people from 32 to 28

--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -9,7 +9,7 @@ researchers:
 - Amirali Amirkhani
 - Anje Knottnerus
 - Barre Dijkstra
-- Bartlomiej Lizak
+- Bartłomiej Lizak
 - Emirhan Baser
 - Inanc Yigit
 - Jeroen van der Broek
