--- a/_cases/2025/DIVD-2025-00033.md
+++ b/_cases/2025/DIVD-2025-00033.md
@@ -33,7 +33,7 @@ timeline:
 ## Summary
 
 GeoServer contains a critical Remote Code Execution (RCE) vulnerability that allows unauthenticated attackers to execute arbitrary code on the server via a XML Code Injection. Successful exploitation can result in full system compromise, including access to credentials, sensitive data, and hosted servers.
-The issue has been resolved in version below 2.27.0, 2.26.2, 2.25.6, of GeoServer. It is strongly recommended to update to the latest version as soon as possible.
+The issue has been resolved in version higher than 2.27.0, 2.26.2, 2.25.6, of GeoServer. It is strongly recommended to update to the latest version as soon as possible.
 
 ## What you can do
 
