--- a/_cases/2025/DIVD-2025-00011.md
+++ b/_cases/2025/DIVD-2025-00011.md
@@ -16,7 +16,7 @@ product:
 - https://oss.growatt.com
 versions: 
 - All versions before 13 June 2025
-recommendation: The vulnerability 
+recommendation: The vulnerability has been remediated by the vendor.
 patch_status: Full patched
 #workaround: n/a
 status : Open
