added second run 00031

--- a/_cases/2025/DIVD-2025-00031.md
+++ b/_cases/2025/DIVD-2025-00031.md
@@ -40,6 +40,12 @@ timeline:
 - start: 2025-06-26
   end:
   event: "DIVD sent out a first batch of notifications."
+- start: 2025-07-10
+  end:
+  event: "DIVD started scanning for second time for vulnerable servers"
+- start: 2025-07-11
+  end:
+  event: "DIVD sent out a second batch of notifications."
 #ips: 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
