--- a/_cases/2025/DIVD-2025-00011.md
+++ b/_cases/2025/DIVD-2025-00011.md
@@ -6,7 +6,7 @@ excerpt: "Authentication vulnerability in the `plant transfer` function of the G
 author: Tom Wolters
 lead: Tom Wolters
 researchers:
-- Humza Ahmad (extrnal)
+- Humza Ahmad (external)
 - Frank Breedijk
 # You can use free text here as well. E.g. to indicate that some vulnerabilities don't have CVEs assigned (yet). But, given that we discovered that you should always be able to get a CVE id from @cna_admins on Slack
 cves:
