--- a/_cases/2025/DIVD-2025-00018.md
+++ b/_cases/2025/DIVD-2025-00018.md
@@ -12,6 +12,7 @@ researchers:
 - Stan Plasmeijer
 - Victor Pasman
 - Max van der Horst
+- Davy Aarts
 # You can use free text here as well. E.g. to indicate that some vulnerabilities don't have CVEs assigned (yet).
 cves:
 - n/a
