added third run towards case

--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -9,6 +9,7 @@ researchers:
 - Joris van de Vis
 - Vladimir Egorov
 - Rudy Dijkstra
+- Davy Aarts
 cves: CVE-2025-31324
 product: SAP
 versions: SAP Visual Composer in SAP JAVA 
@@ -37,6 +38,12 @@ timeline:
   end:
   event: "DIVD starts scanning the internet for open SAP instances second time."
 - start: 2025-06-24
+  end:
+  event: "Notifications have been send out to vulnerable network owners."
+- start: 2025-07-14
+  end:
+  event: "DIVD starts scanning the internet for open SAP instances third time."
+- start: 2025-07-14
   end:
   event: "Notifications have been send out to vulnerable network owners."
 ---
