--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -4,7 +4,7 @@ title: "Unauthenticated file upload in Visual Composer (VCFRAMEWORK)"
 excerpt: "SAP NetWeaver Visual Composer Metadata Uploader lacks proper authorization, allowing unauthenticated users to upload malicious files that can compromise the host system."
 author: Joris van de Vis
 lead: Joris van de Vis
-status : Open
+status : Closed
 researchers:
 - Joris van de Vis
 - Vladimir Egorov
@@ -33,7 +33,7 @@ timeline:
   event: "DIVD starts with identifying owners."
 - start: 2025-06-03
   end:
-  event: "Notifications have been send out to vulnerable network owners."
+  event: "Notifications have been send out to 133 vulnerable network owners."
 - start: 2025-06-18
   end:
   event: "DIVD starts scanning the internet for open SAP instances second time."
