--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -17,7 +17,7 @@ recommendation: "Patches are available now from the vendor. See SAP Security not
 patch_status: Fully patched
 workaround: https://me.sap.com/notes/3593336/E
 start: 2025-05-20
-end:
+end: 2025-07-15
 timeline:
 - start: 2025-04-25
   end: 2025-04-25
@@ -33,7 +33,7 @@ timeline:
   event: "DIVD starts with identifying owners."
 - start: 2025-06-03
   end:
-  event: "Notifications have been send out to 133 vulnerable network owners."
+  event: "Notifications have been send out vulnerable network owners."
 - start: 2025-06-18
   end:
   event: "DIVD starts scanning the internet for open SAP instances second time."
@@ -46,6 +46,10 @@ timeline:
 - start: 2025-07-14
   end:
   event: "Notifications have been send out to vulnerable network owners."
+- start: 2025-07-15
+  end: 2025-07-15
+  event: "DIVD closed case."
+ips: 133
 ---
 ## Summary
 
