--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -33,7 +33,7 @@ timeline:
   event: "DIVD starts with identifying owners."
 - start: 2025-06-03
   end:
-  event: "Notifications have been send out vulnerable network owners."
+  event: "Notifications have been send out to vulnerable network owners."
 - start: 2025-06-18
   end:
   event: "DIVD starts scanning the internet for open SAP instances second time."
