--- a/_cases/2025/DIVD-2025-00005.md
+++ b/_cases/2025/DIVD-2025-00005.md
@@ -34,21 +34,24 @@ timeline:
   end: 2025-04-15
   event: "Creation of target list and fingerprinting methodology"
 - start: 2025-04-29
-  end: 
+  end: 2025-04-29
   event: "Start scanning"
 - start: 2025-05-22
-  end:
+  end: 2025-05-22
   event: "DIVD starts notifying network owners with a vulnerable devices in their network."
 - start: 2025-06-05
-  end:
+  end: 2025-06-05
   event: "Second scan"
 - start: 2025-06-06
+  end: 2025-06-06
+  event: "DIVD starts notifying network owners with a vulnerable devices in their network for the second round."
+- start: 2025-07-17
   end:
-  event: "DIVD begins notifying owners of vulnerable systems."
-- start: 2025-06-06
+  event: "DIVD is scanning for the third time."
+- start: 2025-07-18
   end:
-  event: "DIVD sent out a second round of notifications."
-#ips: n/a
+  event: "DIVD starts notifying network owners with a vulnerable devices in their network for the third round."
+ips: 4122
 ---
 ## Summary
 
