--- a/_cases/2025/DIVD-2025-00035.md
+++ b/_cases/2025/DIVD-2025-00035.md
@@ -1,51 +1,55 @@
 ---
 layout: case
-title: "Remote Code Execution in IBM WebSphere version 8.5 and 9.0"
-excerpt: "A critical vulnerability in IBM WebSphere was discovered in versions 8.5 and 9.0 that allows a remote code execution"
-author: Victor Pasman
-lead: Victor Pasman
+title: "Sharepoint Mass-Exploitation (ToolShell) through CVE-2025-53770"
+excerpt: "Threat actors are targeting Sharepoint installations with CVE-2025-53770. Immediate action is required."
+author: Max van der Horst
+lead: Max van der Horst
 status : Open
 researchers:
-- Davy Aarts
 - Victor Pasman
-- Tycho Niestadt
-cves: CVE-2025-36038
-product: IBM WebSphere 
-versions: IBM WebSphere versions below 9.0.5.24 8.5.5.27 
-recommendation: "Update to versions 8.5.5.28 and 9.0.5.25 or later"
-patch_status: Fully patched
+- Stan Plasmeijer
+- Max van der Horst
+cves: CVE-2025-53770
+product:
+- Microsoft SharePoint Server Subscription Edition
+- Microsoft SharePoint Server 2019
+- Microsoft SharePoint Enterprise Server 2016
+versions: all
+recommendation: "Enable the Anti-Malware Scan Integration (AMSI) offered by Microsoft or take your Sharepoint installation off the internet.""
+patch_status: Not Available
 workaround: "None"
 
 status: Open
-start: 2025-07-01
+start: 2025-07-20
 end:
 timeline:
-- start: 2025-07-01
-  end: 2025-07-01
-  event: "IBM published the vulnerability"
-- start: 2025-07-04
-  end: 2025-07-04
-  event: "DIVD starts scanning the internet for open IBM WebSphere instances."
-- start: 2025-07-09
-  end: 2025-07-09
-  event: "DIVD sent out a first batch of notifications."
+- start: 2025-07-19
+  end:
+  event: "Eye Security published their blog post on ToolShell."
+- start: 2025-07-20
+  end:
+  event: "Eye Security and DIVD start collaboration."
+- start: 2025-07-19
+  end:
+  event: "DIVD starts investigating the presence of implants worldwide."
+
 ---
 ## Summary
 
-The IBM WebSphere contains a critical Remote Code Execution (RCE) vulnerability that allows unauthenticated attackers to execute arbitrary code on the server. Successful exploitation can result in full system compromise, including access to credentials, sensitive data, and hosted servers.
-The issue has been resolved in version 8.5.5.28 and 9.0.5.25 of the IBM WebSphere. It is strongly recommended to update to the latest version as soon as possible.
+Attackers are exploiting a new vulnerability in Microsoft SharePoint to secretly place a small backdoor on affected servers. When accessed, this backdoor reveals secret security keys that allow attackers to fully take over the system and bypass normal protections.
 
 ## What you can do
 
-It is strongly advised that all impacted organisations immediately update their IBM WebSpehere installations to the latest available version (8.5.5.28 or 9.0.5.25) as described in the following [Advisory](https://www.ibm.com/support/pages/node/7237967).
+Check your SharePoint servers for suspicious files with unusual names, such as spinstall0.aspx, and monitor for strange responses when visiting unexpected pages. Make sure to apply the latest Microsoft security updates immediately to close the vulnerability. If you suspect that your server has been compromised, you should change all security keys and credentials, investigate for further unauthorized access, and consider restoring from a clean backup.
 
 ## What we are doing
 
-DIVD is currently working to identify parties that are running a vulnerable version of IBM WebSphere and to notify these parties.
+DIVD is currently working to identify parties that have been compromised by this vulnerability and are running a webshell.
 
 {% include timeline.html %}
 
 ## More information
 
-* [IBM](https://www.ibm.com/support/pages/node/7237967)
-* [cve.org](https://www.cve.org/CVERecord?id=CVE-2025-36038)
+* [Eye Security blogpost](https://research.eye.security/sharepoint-under-siege/)
+* [Advisory Microsoft](https://msrc.microsoft.com/update-guide/vulnerability/CVE-2025-53770)
+* {% cve CVE-2025-53770 %}
