--- a/_cases/2025/DIVD-2025-00035.md
+++ b/_cases/2025/DIVD-2025-00035.md
@@ -15,11 +15,11 @@ product:
 - Microsoft SharePoint Server 2019
 - Microsoft SharePoint Enterprise Server 2016
 versions: all
-recommendation: "Enable the Anti-Malware Scan Integration (AMSI) offered by Microsoft or take your Sharepoint installation off the internet.""
+recommendation: "Enable the Anti-Malware Scan Integration (AMSI) offered by Microsoft or take your Sharepoint installation off the internet."
 patch_status: Not Available
 workaround: "None"
 
-status: Open
+status: 'Open'
 start: 2025-07-20
 end:
 timeline:
