--- a/_cases/2025/DIVD-2025-00035.md
+++ b/_cases/2025/DIVD-2025-00035.md
@@ -16,10 +16,10 @@ product:
 - Microsoft SharePoint Enterprise Server 2016
 versions: all
 recommendation: "Enable the Anti-Malware Scan Integration (AMSI) offered by Microsoft or take your Sharepoint installation off the internet."
-patch_status: Not Available
+patch_status: "Not Available"
 workaround: "None"
 
-status: 'Open'
+status: "Open"
 start: 2025-07-20
 end:
 timeline:
@@ -40,7 +40,7 @@ Attackers are exploiting a new vulnerability in Microsoft SharePoint to secretly
 
 ## What you can do
 
-Check your SharePoint servers for suspicious files with unusual names, such as spinstall0.aspx, and monitor for strange responses when visiting unexpected pages. Make sure to apply the latest Microsoft security updates immediately to close the vulnerability. If you suspect that your server has been compromised, you should change all security keys and credentials, investigate for further unauthorized access, and consider restoring from a clean backup.
+Either ensure that Microsoft's Anti-Malware Scan Integration (AMSI) is enabled on your server or take it off the internet completely. Moreoever, check your SharePoint servers for suspicious files with unusual names, such as spinstall0.aspx, and monitor for strange responses when visiting unexpected pages. Make sure to apply the latest Microsoft security updates immediately to close the vulnerability. If you suspect that your server has been compromised, you should change all security keys and credentials, investigate for further unauthorized access, and consider restoring from a clean backup.
 
 ## What we are doing
 
