New additions to timeline

--- a/_cases/2025/DIVD-2025-00035.md
+++ b/_cases/2025/DIVD-2025-00035.md
@@ -32,11 +32,16 @@ timeline:
 - start: 2025-07-19
   end:
   event: "DIVD starts investigating the presence of implants worldwide."
+- start: 2025-07-20
+  end:
+  event: "Scanned newly identified on-premise SharePoint hosts from NetLas.io for signs of compromise."
 
 ---
 ## Summary
 
-Attackers are exploiting a new vulnerability in Microsoft SharePoint to secretly place a small backdoor on affected servers. When accessed, this backdoor reveals secret security keys that allow attackers to fully take over the system and bypass normal protections.
+Attackers are exploiting a new vulnerability in Microsoft SharePoint Server to secretly place a small backdoor on affected servers. This only affects organizations running SharePoint on-premise (local installations), not SharePoint as part of Microsoft 365 (SharePoint Online).
+
+When accessed, this backdoor reveals secret security keys that allow attackers to fully take over the system and bypass normal protections.
 
 ## What you can do
 
@@ -44,7 +49,9 @@ Either ensure that Microsoft's Anti-Malware Scan Integration (AMSI) is enabled o
 
 ## What we are doing
 
-DIVD is currently working to identify parties that have been compromised by this vulnerability and are running a webshell.
+DIVD is currently working to identify on-premise SharePoint instances that have been compromised through CVE-2025-53770. We use data from multiple sources, including Shodan, Censys, and NetLas.io, to locate potentially vulnerable SharePoint instances. We then perform our own targeted scans to detect signs of active exploitation—specifically the presence of webshells or other malicious implants.
+
+Once a potential compromise is confirmed, we notify the affected organizations either directly or via trusted third parties, depending on the available contact information and responsible disclosure channels.
 
 {% include timeline.html %}
 
