--- a/_cases/2025/DIVD-2025-00035.md
+++ b/_cases/2025/DIVD-2025-00035.md
@@ -59,5 +59,5 @@ Once a potential compromise is confirmed, we notify the affected organizations e
 
 * [Eye Security blogpost](https://research.eye.security/sharepoint-under-siege/)
 * [Vulnerability advisory Microsoft](https://msrc.microsoft.com/update-guide/vulnerability/CVE-2025-53770)
-* [Customer Guidance - Microsoft](http://msrc.microsoft.com/blog/2025/07/customer-guidance-for-sharepoint-vulnerability-cve-2025-53770)
+* [Customer Guidance - Microsoft](https://msrc.microsoft.com/blog/2025/07/customer-guidance-for-sharepoint-vulnerability-cve-2025-53770/)
 * {% cve CVE-2025-53770 %}
