--- a/_cases/2025/DIVD-2025-00035.md
+++ b/_cases/2025/DIVD-2025-00035.md
@@ -37,7 +37,7 @@ timeline:
   event: "Scanned newly identified on-premise SharePoint hosts from [Netlas.io](https://Netlas.io)  for signs of compromise."
 - start: 2025-07-21
   end:
-  event: "DIVD has started research to detect vulnerable systems with AMSI disabled.""
+  event: "DIVD has started research to detect vulnerable systems with AMSI disabled."
 
 ---
 ## Summary
