Adding Victor and Harm

--- a/_cases/2025/DIVD-2025-00011.md
+++ b/_cases/2025/DIVD-2025-00011.md
@@ -8,6 +8,8 @@ lead: Tom Wolters
 researchers:
 - Humza Ahmad (ENCS)
 - Frank Breedijk
+- Victor Pasman
+- Harm van den Brink
 # You can use free text here as well. E.g. to indicate that some vulnerabilities don't have CVEs assigned (yet). But, given that we discovered that you should always be able to get a CVE id from @cna_admins on Slack
 cves:
 - CVE-2025-29757
