--- a/_cases/2025/DIVD-2025-00011.md
+++ b/_cases/2025/DIVD-2025-00011.md
@@ -3,10 +3,10 @@ layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: Failed authentication check in Growatt portal
 excerpt: "Authentication vulnerability in the `plant transfer` function of the Growatt cloud portal allowed an attacker with an account to take over any plant form any user."
-author: Tom Wolters
-lead: Tom Wolters
+author: Frank Breedijk
+lead: Frank Breedijk
 researchers:
-- Humza Ahmad (extrnal)
+- Humza Ahmad (external)
 - Frank Breedijk
 # You can use free text here as well. E.g. to indicate that some vulnerabilities don't have CVEs assigned (yet). But, given that we discovered that you should always be able to get a CVE id from @cna_admins on Slack
 cves:
