--- a/_cases/2025/DIVD-2025-00011.md
+++ b/_cases/2025/DIVD-2025-00011.md
@@ -3,8 +3,8 @@ layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: Failed authentication check in Growatt portal
 excerpt: "Authentication vulnerability in the `plant transfer` function of the Growatt cloud portal allowed an attacker with an account to take over any plant form any user."
-author: Tom Wolters
-lead: Tom Wolters
+author: Frank Breedijk
+lead: Frank Breedijk
 researchers:
 - Humza Ahmad (ENCS)
 - Frank Breedijk
