--- a/_cases/2025/DIVD-2025-00032.md
+++ b/_cases/2025/DIVD-2025-00032.md
@@ -4,7 +4,7 @@ title: "Unauthenticated Arbitrary Remote Code Execution in Pterodactyl"
 excerpt: "A critical vulnerability in Pterodactyl was discovered in versions below 1.11.11 that allows unauthenticated user preform remote code execution"
 author: Davy Aarts
 lead: Davy Aarts
-status : closed
+status : Closed
 researchers:
 - Davy Aarts
 - Victor Pasman
@@ -16,7 +16,7 @@ patch_status: Fully patched
 workaround: "Available"
 ips: 4324
 
-status: closed
+status: Closed
 start: 2025-06-20
 end: 2025-08-20
 timeline:
@@ -71,3 +71,4 @@ DIVD is currently working to identify parties that are running a vulnerable vers
 * [latest release](https://github.com/pterodactyl/panel/releases)
 * [WIZ blog](https://www.wiz.io/vulnerability-database/cve/cve-2025-49132)
 * [NIST CVE-2025-49132](https://nvd.nist.gov/vuln/detail/cve-2025-49132)
+
