00034 update with second run

--- a/_cases/2025/DIVD-2025-00034.md
+++ b/_cases/2025/DIVD-2025-00034.md
@@ -29,6 +29,12 @@ timeline:
 - start: 2025-07-09
   end: 2025-07-09
   event: "DIVD sent out a first batch of notifications."
+- start: 2025-08-20
+  end: 2025-08-20
+  event: "DIVD starts scanning the internet for open IBM WebSphere instances for the second time."
+- start: 2025-08-20
+  end: 2025-08-20
+  event: "DIVD sent out a second batch of notifications."
 ---
 ## Summary
 
