added third scan of 00031

--- a/_cases/2025/DIVD-2025-00031.md
+++ b/_cases/2025/DIVD-2025-00031.md
@@ -46,6 +46,12 @@ timeline:
 - start: 2025-07-11
   end:
   event: "DIVD sent out a second batch of notifications."
+- start: 2025-08-20
+  end:
+  event: "DIVD started scanning for third time for vulnerable servers"
+- start: 2025-08-22
+  end:
+  event: "DIVD sent out a third batch of notifications."
 #ips: 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
