--- a/_cases/2025/DIVD-2025-00005.md
+++ b/_cases/2025/DIVD-2025-00005.md
@@ -17,9 +17,9 @@ versions:
 recommendation: "Operators should implement VPN gateways or dedicated hardware interfaces to connect ATGs with monitoring services. Alternative mitigations include applying source IP address filters or setting passwords on serial ports."
 patch_status: N/A, this is a configuration problem.
 workaround: "Restrict access using firewalls, implement source IP filtering, or set up a VPN for secure remote access."
-status: Open
+status: Closed
 start: 2024-12-15
-end: 
+end: 2025-07-18
 timeline:
 - start: 2024-11-28
   end:
