--- a/_cases/2025/DIVD-2025-00037.md
+++ b/_cases/2025/DIVD-2025-00037.md
@@ -71,7 +71,8 @@ DIVD is currently scanning for vulnerable Citrix ADC and Gateway appliances and 
 {% include timeline.html %}
 
 ## More information
-* {% CVE-2025-7775 %}
+* {% cve 2025-7775 %}
+
 * {% cve CVE-2025-7776 %}
 * {% cve CVE-2025-8424 %}
 * [NetScaler ADC and NetScaler Gateway Security Bulletin for CVE-2025-7775, CVE-2025-7776 and CVE-2025-8424](https://support.citrix.com/support-home/kbsearch/article?articleNumber=CTX694938)
