--- a/_cases/2025/DIVD-2025-00037.md
+++ b/_cases/2025/DIVD-2025-00037.md
@@ -45,7 +45,8 @@ The most critical issue, {% cve 2025-7775 %}, is a memory overflow vulnerability
 
 **Additional vulnerabilities include:**
 - {% cve 2025-7776 %} – Memory overflow leading to unpredictable behavior and potential denial of service.
-- {% cve 2025-8424 %} – Improper access control on the management interface, allowing unauthorized access to NSIP, Cluster IP, GSLB Site IP, or SNIP when management access is enabled.
+- CVE-2025-8424 – Improper access control on the management interface, allowing unauthorized access to NSIP, Cluster IP, GSLB Site IP, or SNIP when management access is enabled.
+
 
 These issues affect multiple versions, including 13.1, 14.1, 13.1-FIPS, 13.1-NDcPP, and older supported releases.
 Note: NetScaler ADC and NetScaler Gateway versions 12.1 and 13.0 are now End Of Life (EOL) and no longer supported. Users of those version are strongly advised to upgrade to a supported release that addresses these vulnerabilities.
