--- a/_cases/2025/DIVD-2025-00037.md
+++ b/_cases/2025/DIVD-2025-00037.md
@@ -54,7 +54,8 @@ Note: NetScaler ADC and NetScaler Gateway versions 12.1 and 13.0 are now End Of 
 Cloud-managed instances have already been patched by Citrix.
 
 ## What you can do
-To remediate {% cve CVE-2025-7775 %}, {% cve CVE-2025-7776 %}, and {% cve CVE-2025-8424 %}, apply the latest patches as soon as possible for impacted products. 
+To remediate CVE-2025-7775, CVE-2025-7776, and CVE-2025-8424, apply the latest patches as soon as possible for impacted products. 
+
 
 **Recommended fixed versions:**
 - NetScaler ADC / Gateway 14.1 → Upgrade to 14.1-47.48 or later
