--- a/_cases/2025/DIVD-2025-00037.md
+++ b/_cases/2025/DIVD-2025-00037.md
@@ -44,7 +44,8 @@ On 26 August 2025, Citrix released security updates for vulnerabilities in Citri
 The most critical issue, {% cve 2025-7775 %}, is a memory overflow vulnerability affecting appliances configured as Gateway (VPN virtual server, ICA Proxy, CVPN, RDP Proxy), AAA virtual servers, or certain LB virtual servers bound to IPv6 services. Exploitation of unpatched appliances has been observed in the wild.
 
 **Additional vulnerabilities include:**
-- {% cve 2025-7776 %} – Memory overflow leading to unpredictable behavior and potential denial of service.
+- CVE-2025-7776 – Memory overflow leading to unpredictable behavior and potential denial of service.
+
 - CVE-2025-8424 – Improper access control on the management interface, allowing unauthorized access to NSIP, Cluster IP, GSLB Site IP, or SNIP when management access is enabled.
 
 
