Send out first batch

--- a/_cases/2025/DIVD-2025-00037.md
+++ b/_cases/2025/DIVD-2025-00037.md
@@ -35,6 +35,9 @@ timeline:
 - start: 2025-08-27
   end:
   event: "First version of this case file"
+- start: 2025-08-28
+  end:
+  event: "DIVD sent out a first batch of notifications."
 #ips: 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
