--- a/_cases/2023/DIVD-2023-00033.md
+++ b/_cases/2023/DIVD-2023-00033.md
@@ -3,9 +3,11 @@ layout: case
 title: Citrix systems exploited with CVE-2023-3519
 excerpt: "DIVD is notifying owners of exploited Citrix ADC and Gateway systems, based on scanning data obtained from Fox-IT."
 author: Max van der Horst
-lead: Lennaert Oudshoorn
+lead: Ralph Horn
 researchers:
 - Fox-IT
+- Ralph Horn
+- Max van der Horst
 cves:
 - CVE-2023-3519
 product: 
