--- a/_cases/2025/DIVD-2025-00031.md
+++ b/_cases/2025/DIVD-2025-00031.md
@@ -21,9 +21,9 @@ versions:
 recommendation: "Update your system to the latest patched version"
 patch_status: Fully patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2025-06-18
-end: 
+end: 2025-08-22
 timeline:
 - start: 2025-06-18
   end:
@@ -52,7 +52,7 @@ timeline:
 - start: 2025-08-22
   end:
   event: "DIVD sent out a third batch of notifications."
-#ips: 
+ips: 14156
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
