00033 last mailing and case closed

--- a/_cases/2025/DIVD-2025-00033.md
+++ b/_cases/2025/DIVD-2025-00033.md
@@ -4,7 +4,7 @@ title: "Remote Code Execution in GeoServer versions below 2.27.0, 2.26.2 and 2.2
 excerpt: "A critical vulnerability in GeoServer was discovered in versions below 2.27.0, 2.26.2, and 2.25.6 that allows a remote code execution via injecting XML code"
 author: Victor Pasman
 lead: Victor Pasman
-status : Open
+status : Closed
 researchers:
 - Davy Aarts
 - Victor Pasman
@@ -16,9 +16,9 @@ recommendation: "Update to versions 2.27.0, 2.26.2, 2.25.6, or later"
 patch_status: Fully patched
 workaround: "None"
 
-status: Open
+status: Closed
 start: 2025-06-18
-end:
+end: 2025-09-08
 timeline:
 - start: 2025-06-18
   end: 2025-06-18
@@ -35,6 +35,13 @@ timeline:
 - start: 2025-08-20
   end: 2025-08-20
   event: "DIVD sent out a second batch of notifications."
+- start: 2025-09-08
+  end: 2025-09-08
+  event: "DIVD starts scanning the internet for GeoServer instances for the third time."
+- start: 2025-09-08
+  end: 2025-09-08
+  event: "DIVD sent out a third batch of notifications."
+ips: 97
 ---
 ## Summary
 
