--- a/_cases/2025/DIVD-2025-00034.md
+++ b/_cases/2025/DIVD-2025-00034.md
@@ -41,6 +41,9 @@ timeline:
 - start: 2025-09-08
   end: 2025-09-08
   event: "DIVD sent out a third batch of notifications."
+- start: 2025-09-08
+  end: 2025-09-08
+  event: "Case closed"
 ips: 658 
 ---
 ## Summary
