--- a/_cases/2025/DIVD-2025-00037.md
+++ b/_cases/2025/DIVD-2025-00037.md
@@ -38,6 +38,12 @@ timeline:
 - start: 2025-08-28
   end:
   event: "DIVD sent out a first batch of notifications."
+- start: 2025-09-08
+  end:
+  event: "DIVD started scanning for vulnerable servers second time"
+- start: 2025-09-08
+  end:
+  event: "DIVD sent out a second batch of notifications."
 #ips: 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
