Add ENCS mention

--- a/_cases/2025/DIVD-2025-00015.md
+++ b/_cases/2025/DIVD-2025-00015.md
@@ -64,7 +64,7 @@ ips: 1
 ---
 
 ## Summary
-SolaX Cloud is a cloud platform that allows owners of SolaX solarpanel inverters to manage their inverters through the cloud. DIVD has received a vulnerability report with a number of vulnerabilities of which at least one is considered critical. SolaX has fixed these vulnerabilities in SolaX Cloud version 6.9.
+SolaX Cloud is a cloud platform that allows owners of SolaX solarpanel inverters to manage their inverters through the cloud. DIVD has received a vulnerability report from a researcher at [ENCS](https://encs.eu/) with a number of vulnerabilities of which at least one is considered critical. SolaX has fixed these vulnerabilities in SolaX Cloud version 6.9.
 
 ## What you can do
 As this is an online service, you do not have to take any action right now.
