--- a/_cases/2025/DIVD-2025-00037.md
+++ b/_cases/2025/DIVD-2025-00037.md
@@ -22,9 +22,9 @@ versions:
 recommendation: "Update your system to the latest patched version"
 patch_status: Fully patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2025-08-26
-end: 
+end: 2025-09-25
 timeline:
 - start: 2025-08-26
   end:
@@ -44,7 +44,13 @@ timeline:
 - start: 2025-09-08
   end:
   event: "DIVD sent out a second batch of notifications."
-#ips: 
+- start: 2025-09-25
+  end:
+  event: "DIVD started scanning for vulnerable servers third time"
+- start: 2025-09-25
+  end:
+  event: "DIVD sent out a third batch of notifications."
+ips: 8846
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
