first notification of 39

--- a/_cases/2025/DIVD-2025-00039.md
+++ b/_cases/2025/DIVD-2025-00039.md
@@ -40,6 +40,9 @@ timeline:
 - start: 2025-09-24
   end:
   event: "Cisco published security advisory on ASA WebVPN vulnerabilities."
+- start: 2025-10-03
+  end:
+  event: "First batch of notifications are being send"
 
 ---
 
