--- a/_cases/2025/DIVD-2025-00040.md
+++ b/_cases/2025/DIVD-2025-00040.md
@@ -14,7 +14,7 @@ cves:
 - CVE-2025-61882
 
 product:
-- Oracle Concurrent Processing product of Oracle E-Business Suite`
+- Oracle Concurrent Processing product of Oracle E-Business Suite
 
 versions: 12.2.3 - 12.2.14
 
