--- a/_cases/2025/DIVD-2025-00040.md
+++ b/_cases/2025/DIVD-2025-00040.md
@@ -24,7 +24,7 @@ patch_status: "Available"
 
 workaround: "If patching is not immediately possible, consider disabling limiting access to trusted networks only."
 
-case_number: DIVD-2025-00xxx
+case_number: DIVD-2025-00040
 
 status: "Open"
 start: 2025-10-06
