Update DIVD-2025-00040.md - fix timeline

--- a/_cases/2025/DIVD-2025-00040.md
+++ b/_cases/2025/DIVD-2025-00040.md
@@ -38,7 +38,8 @@ timeline:
   end:
   event: "Oracle published security advisory."
 - start: 2025-10-07
-  end: "find vulnerable instances"
+  end:
+  event: "Find vulnerable instances"
 - start: 2025-10-08
   end:
   event: "Start notifying vulnerable instances."
