--- a/_cases/2025/DIVD-2025-00040.md
+++ b/_cases/2025/DIVD-2025-00040.md
@@ -39,7 +39,7 @@ timeline:
   event: "Oracle published security advisory."
 - start: 2025-10-07
   end:
-  event: "Find vulnerable instances"
+  event: "Find vulnerable instances."
 - start: 2025-10-08
   end:
   event: "Start notifying vulnerable instances."
