--- a/_cases/2025/DIVD-2025-00040.md
+++ b/_cases/2025/DIVD-2025-00040.md
@@ -51,7 +51,7 @@ timeline:
 Oracle has released an advisory addressing a vulnerability in the Oracle Concurrent Processing of Oracle E-Business Suite. (component: BI Publisher Integration) If exploited, this vulnerability could allow attackers to bypass authentication mechanisms or execute arbitrary actions, potentially leading to unauthorized access to internal resources.
 
 The vulnerabilities are identified as:
-- **CVE-2025-61882** – Vulnerability in the Oracle Concurrent Processing product of Oracle E-Business Suite (component: BI Publisher)
+- {% cve CVE-2025-61882 %} – Vulnerability in the Oracle Concurrent Processing product of Oracle E-Business Suite (component: BI Publisher)
 
 ## What you can do
 
