--- a/_cases/2025/DIVD-2025-00040.md
+++ b/_cases/2025/DIVD-2025-00040.md
@@ -55,7 +55,7 @@ The vulnerabilities are identified as:
 
 ## What you can do
 
-- **Update immediately**: https://www.oracle.com/security-alerts/alert-cve-2025-61882.html
+- **Update immediately**: Follow [Oracle's instructions](https://www.oracle.com/security-alerts/alert-cve-2025-61882.html)
 - **Mitigate risk**: If patching cannot be done right away, restrict them to trusted networks only.  
 - **Monitor your systems**: Watch for unusual login attempts, session hijacking indicators, or performance degradation that may point to exploitation.  
 - **Review logs**: Inspect logs for signs of abuse or suspicious activity.  
