--- a/_cases/2025/DIVD-2025-00040.md
+++ b/_cases/2025/DIVD-2025-00040.md
@@ -68,9 +68,8 @@ We are scanning for Oracle E-Business Suite instances exposed to the internet th
 
 ## More information
 
-* https://www.oracle.com/security-alerts/alert-cve-2025-61882.html
-* https://blogs.oracle.com/security/post/apply-july-2025-cpu
-* https://nvd.nist.gov/vuln/detail/CVE-2025-61882
-* https://labs.watchtowr.com/well-well-well-its-another-day-oracle-e-business-suite-pre-auth-rce-chain-cve-2025-61882well-well-well-its-another-day-oracle-e-business-suite-pre-auth-rce-chain-cve-2025-61882
+* [Oracle security advisory](https://www.oracle.com/security-alerts/alert-cve-2025-61882.html)
+* [Oracle blog](https://blogs.oracle.com/security/post/apply-july-2025-cpu)
+* [Blog post by Watchtowr](https://labs.watchtowr.com/well-well-well-its-another-day-oracle-e-business-suite-pre-auth-rce-chain-cve-2025-61882well-well-well-its-another-day-oracle-e-business-suite-pre-auth-rce-chain-cve-2025-61882)
 * {% cve CVE-2025-61822 %}
 
