--- a/_cases/2025/DIVD-2025-00041.md
+++ b/_cases/2025/DIVD-2025-00041.md
@@ -40,15 +40,20 @@ creds: n/a
 ---
 ## Summary
 
-On 13 Vovember 2025, the Dutch national police went public with another action under [Operation Endgame](https://operation-endgame.com/) the biggest continued anti-botnet operation to date. The The Dutch Police, in cooperation with (TODO)and support from Europol and Eurojust had infiltrated a number of botnets. You can find [details of the operation](https://operation-endgame.com/TODO) on the [Operation Endgame site](https://operation-endgame.com/)
+On November 13th 2025, The Dutch National Police, in cooperation with EuropPol, Eurojust and […] took down [xxx] botnets under the name of [xxxxx] in a another episode of [Operation Endgame](https://operation-endgame.com/), the biggest continued anti-botnet operation to date. During this takedown, the stolen data has been seized.
 
-As part of this operation stealer logs, containing the information of many victims of the targeted malware platforms have been shared with the [DIVD](https://wwww.divd.nl), [Have I Been Pwned](https://haveibeenpwned.com/), [Spamhaus](https://www.spamhaus.org/resource-hub/malware/operation-endgame-botnets-disrupted-after-international-action/), [Project No More Leaks](https://www.politie.nl/onderwerpen/no-more-leaks.html), [Project Check je Hack](https://www.politie.nl/informatie/checkjehack.html), the (Dutch) [NCSC](https://ncsc.nl),  [CSIRT-DSP](https://csirtdsp.nl/), and [Digital Trust Center](https://www.digitaltrustcenter.nl/).
+As part of this operation, stealer logs containing information on many victims of the targeted malware platforms have been shared with: [DIVD](https://wwww.divd.nl), [Have I Been Pwned](https://haveibeenpwned.com/), [Spamhaus](https://www.spamhaus.org/resource-hub/malware/operation-endgame-botnets-disrupted-after-international-action/), [Project No More Leaks](https://www.politie.nl/onderwerpen/no-more-leaks.html), [Project Check je Hack](https://www.politie.nl/informatie/checkjehack.html), the (Dutch) [NCSC](https://ncsc.nl),  [CSIRT-DSP](https://csirtdsp.nl/), and [Digital Trust Center](https://www.digitaltrustcenter.nl/).
 
+NCSC, DTC, DIVD and [xxxxx] are notifying everyone in the dataset we are able to reach.
+
+### The dataset contains
 The data sets contain a.o. usernames, (redacted) passwords, date of last use and URL, and optionally the IP address, computer name and user account of the user compromised. 
 
-## What you can do
+### Possible impact if no action is taken
+The data on its own might appear harmless or insignificant, but when combined with reused passwords, lack of MFA (Multi-Factor Authentication), or internal host and user context, it makes account takeovers, fraud, and network intrusion possible. Taking action helps protect your accounts and personal information from being misused. 
 
-Please stand by while we anlyse the data.
+## What you must do
+Whilest we analyse the data, this section will be updated. Please act immediately if you receive a notification email from us. Instructions can be found in the email and below.
 <!---
 If you received a notification frm DIVD about this dataset, it means that either you yourself, a member of your organisation or a customer of your service has fallen victim to info stealer. This means a device has been compromised, one or more passwords have been stolen.
 
@@ -65,7 +70,15 @@ Due to the volume of the dataset we have not been able to send notifications to 
 
 ## What we are doing
 
-We are currently analysing the data received from the police. Once we have finished to analysis we will start fictim notification in line with our [stole credentials policy](/credentials/)
+We are now analysing the received data, once finished we’ll start victim notification. Therefore we work by our stolen credentials policy.  [stole credentials policy](/credentials/)
+
+###Details of this operation
+- [link]
+- [operation endgame]
+- [press release Europol]
+- [press release Dutch National Police] 
+- [divd./nl/case] 
+
 
 ## Frequently asked questions
 
