--- a/_cases/2025/DIVD-2025-00041.md
+++ b/_cases/2025/DIVD-2025-00041.md
@@ -47,7 +47,7 @@ As part of this operation, stealer logs containing information on many victims o
 NCSC, DTC, DIVD and [xxxxx] are notifying everyone in the dataset we are able to reach.
 
 ### The dataset contains
-The data sets contain a.o. usernames, (redacted) passwords, date of last use and URL, and optionally the IP address, computer name and user account of the user compromised. 
+The datasets contain stolen user data, including usernames, redacted passwords, the URL and timestamp of the last observed use, and, where available, the victim’s IP address, device (computer) name, and local user account.
 
 ### Possible impact if no action is taken
 The data on its own might appear harmless or insignificant, but when combined with reused passwords, lack of MFA (Multi-Factor Authentication), or internal host and user context, it makes account takeovers, fraud, and network intrusion possible. Taking action helps protect your accounts and personal information from being misused. 
