--- a/_cases/2025/DIVD-2025-00041.md
+++ b/_cases/2025/DIVD-2025-00041.md
@@ -16,7 +16,7 @@ product:
 #versions:
 #- All versions
 #- Again one per line
-recommendation: If you received a notification from us, you, members of your organization or your customers had their password stolen and/or system infected by the infostealer malwware. Detailed recommendations are found below.
+recommendation: If you received a notification from us, it means that you, members of your organization, or your customers likely have had their passwords stolen or their systems infected by the infostealer. Detailed recommendations can be found below.
 #patch_status: Fully patched
 #workaround: n/a
 status : Open
