--- a/_cases/2025/DIVD-2025-00041.md
+++ b/_cases/2025/DIVD-2025-00041.md
@@ -16,7 +16,7 @@ product:
 #versions:
 #- All versions
 #- Again one per line
-recommendation: If you received a notification from us, you, members of your organization or your customers had their password stolen and/or system infected by the infostealer malwware. Detailed recommendations are found below.
+recommendation: If you received a notification from us, it means that you, members of your organization, or your customers likely have had their passwords stolen or their systems infected by the infostealer. Detailed recommendations can be found below.
 #patch_status: Fully patched
 #workaround: n/a
 status : Open
@@ -40,7 +40,7 @@ creds: n/a
 ---
 ## Summary
 
-On 13 Vovember 2025, the Dutch national police went public with another action under [Operation Endgame](https://operation-endgame.com/) the biggest continued anti-botnet operation to date. The The Dutch Police, in cooperation with (TODO)and support from Europol and Eurojust had infiltrated a number of botnets. You can find [details of the operation](https://operation-endgame.com/TODO) on the [Operation Endgame site](https://operation-endgame.com/)
+On 13 November 2025, the Dutch national police went public with another action under [Operation Endgame](https://operation-endgame.com/) the biggest continued anti-botnet operation to date. The The Dutch Police, in cooperation with (TODO)and support from Europol and Eurojust had infiltrated a number of botnets. You can find [details of the operation](https://operation-endgame.com/TODO) on the [Operation Endgame site](https://operation-endgame.com/)
 
 As part of this operation stealer logs, containing the information of many victims of the targeted malware platforms have been shared with the [DIVD](https://wwww.divd.nl), [Have I Been Pwned](https://haveibeenpwned.com/), [Spamhaus](https://www.spamhaus.org/resource-hub/malware/operation-endgame-botnets-disrupted-after-international-action/), [Project No More Leaks](https://www.politie.nl/onderwerpen/no-more-leaks.html), [Project Check je Hack](https://www.politie.nl/informatie/checkjehack.html), the (Dutch) [NCSC](https://ncsc.nl),  [CSIRT-DSP](https://csirtdsp.nl/), and [Digital Trust Center](https://www.digitaltrustcenter.nl/).
 
